CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

19 September 2007
+ Added '#' to characters looked for in the bb.php filter.

Version 1.6.2
-------------------------------------------------------------------
18 September 2007
+ Fixed several bugs with js_calendar. Thanks Jeff.
+ Updated files: 
  javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.css
  javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.js
  javascript/js_calendar/head.js
  javascript/js_calendar/phpws_addon.js

17 September 2007
+ Added notes to Mod_Rewrite doc.
+ More work on Web Pages, PageSmith, and Menu conversion.
+ Added rotate and resize image functions to File class. Resize is a
  copy of file cabinet's.
+ Added some focus function calls to the open_window
  javascript. Supposed to prevent window from getting lost behind the
  parent window.

+ Updated: javascript/open_window/head.js

13 September 2007
+ Uploaded PageSmith conversion. Still working out Menu kinks.
+ Rewrote large portions of Menu conversion to function better and
  work with pagesmith.
+ Added extra logic for Database to try to indexBy better.

Version 1.6.1
------------------------------------------------------------------
10 September 2007
+ Init.php - added dngettext replacement function 
+ Database.php - reindexSequenceTable now handles missing and empty
  tables 

6 September 2007
+ XMLRPC now handles media (i.e. graphic) uploads
+ Added appendSlash function to File. Was a often repeated function.
+ Fixed IXR_Library.inc.php. media function to trim string.
+ Fixed IXR date formatting.
+ Fixed several issues to make XMLRPC more compatible.
+ Added appendImages function to place url at front of image tags
+ removed record calls. Refined record function.

5 September 2007
+ File - Really, truly fixed the slash detection on copy_directory
  function. 
+ Database
  o Lowercased nulls.