@@ -128,6 +128,7 @@ $errors[KEY_PERM_COLUMN_MISSING]      = _('Edit permission column does not exist
 $errors[KEY_UNREG_FILE_MISSING]       = _('Could not find key unregister file.');
 $errors[KEY_UNREG_FUNC_MISSING]       = _('Could not find key unregister function.');
 $errors[KEY_RESTRICT_NO_TABLE]        = _('Key can not restrict items on phpws_key table alone.');
+$errors[KEY_DUPLICATE]                = _('Duplicate key found.');
 
 // Batch.php 1500-1599
 
