@@ -2,6 +2,12 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+20 September 2007
++ Key checks for duplicate keys before saving new rows.
++ New error message for above.
++ Tidying to key class.
++ Updated: conf/error.php
+
 19 September 2007
 + Added '#' to characters looked for in the bb.php filter.
 
